--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-*.swp
-*.pyc
+*.*
+
+!*.py
+!*.c
+!*.h
+!.gitignore
+!README.md
+
+!*.opensdf
+!*.sln
+!*.suo
+!*.rc2
+!*.rc
+!*.aps
+!*.txt
+!*.aps
+!*.cpp
+!*.def
+!*.vcxproj
+!*.vcxproj.filters
